<resources>
    <string name="app_name">Wheel</string>
    <string name="title">Android Steering Wheel</string>
    <string name="buttonX">X</string>
    <string name="buttonY">Y</string>
    <string name="buttonA">A</string>
    <string name="buttonB">B</string>
    <string name="buttonLB">LB</string>
    <string name="buttonRB">RB</string>
    <string name="buttonLT">LT</string>
    <string name="buttonRT">RT</string>
    <string name="buttonSTART">START</string>
    <string name="buttonBACK">BACK</string>
    <string name="buttonUP">↑</string>
    <string name="buttonDOWN">↓</string>
    <string name="buttonLEFT">←</string>
    <string name="buttonRIGHT">→</string>
    <string name="buttonHOME">HOME</string>

    <string name="navTitleConnection">Connection Setup</string>
    <string name="navTitleControl">Control Options</string>
    <string name="navTitleControlSteer1">Steering (Default)</string>
    <string name="navTitleControlSteer2">Steering (Alternative)</string>
    <string name="navTitleControlPad">GamePad</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="logTagMain">log_MainActivity</string>
    <string name="logTagConnection">log_Connection</string>
    <string name="logTagMotion">log_Motion</string>

    <string name="radioButtonBluetooth">Bluetooth</string>
    <string name="radioButtonWifi">Wifi</string>
    <string name="radioButtonTitle">Connection Type</string>
    <string name="buttonConnect">Connect</string>
    <string name="buttonDisconnect">Disconnect</string>

    <string name="controlSteeringTitle">Steering Control</string>
    <string name="controlSteeringAngleHorizontal">Horizontal Angle</string>
    <string name="controlSteeringAngleVertical">Vertical Angle</string>
</resources>
