<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/controlPadButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:onClick="pressLB"
                android:text="@string/buttonLB" />

            <Button
                android:id="@+id/buttonLTPad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:text="@string/buttonLT" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="pressBACK"
                android:text="@string/buttonBACK" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="pressY"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:text="@string/buttonY"
                android:textColor="@color/colorButtonY" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="pressX"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:text="@string/buttonX"
                android:textColor="@color/colorButtonX" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="pressLEFT"
                android:text="@string/buttonLEFT"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="pressUP"
                android:text="@string/buttonUP"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="pressSTART"
                android:text="@string/buttonSTART" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pressB"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:text="@string/buttonB"
                android:textColor="@color/colorButtonB" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="pressA"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:text="@string/buttonA"
                android:textColor="@color/colorButtonA" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="pressRIGHT"
                android:text="@string/buttonRIGHT"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="pressDOWN"
                android:text="@string/buttonDOWN"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:onClick="pressRB"
                android:text="@string/buttonRB" />

            <Button
                android:id="@+id/buttonRTPad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:text="@string/buttonRT" />
        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarLT"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:max="100"
        android:progress="50"
        android:rotation="270"
        android:scaleX="4.0"
        android:scaleY="4.0"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/controlPadButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarRT"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:max="100"
        android:progress="50"
        android:rotation="270"
        android:scaleX="4.0"
        android:scaleY="4.0"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/controlPadButtons"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>