<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/controlAlterButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonLB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:text="@string/buttonLB" />

            <Button
                android:id="@+id/buttonLT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:text="@string/buttonLT" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBarAcc"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:progress="50"
                android:scaleY="2.0" />

            <Button
                android:id="@+id/buttonY"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:text="@string/buttonY"
                android:textColor="@color/colorButtonY" />

            <Button
                android:id="@+id/buttonX"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:text="@string/buttonX"
                android:textColor="@color/colorButtonX" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBarSteer"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:progress="50"
                android:scaleY="2.0" />

            <Button
                android:id="@+id/buttonB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:text="@string/buttonB"
                android:textColor="@color/colorButtonB" />

            <Button
                android:id="@+id/buttonA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:text="@string/buttonA"
                android:textColor="@color/colorButtonA" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonRB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:text="@string/buttonRB" />

            <Button
                android:id="@+id/buttonRT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:text="@string/buttonRT" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="casual"
        android:text="@string/controlSteeringTitle"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/controlAlterButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarLT"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="8dp"
        android:max="100"
        android:progress="50"
        android:rotation="270"
        android:scaleX="4.0"
        android:scaleY="4.0"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/controlAlterButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarRT"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="64dp"
        android:max="100"
        android:progress="50"
        android:rotation="270"
        android:scaleX="4.0"
        android:scaleY="4.0"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/controlAlterButtons"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>