<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/controlDefaultButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBarAcc"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:progress="50"
                android:scaleY="2.0" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="pressY"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:text="@string/buttonY"
                android:textColor="@color/colorButtonY" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="pressX"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:text="@string/buttonX"
                android:textColor="@color/colorButtonX" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBarSteer"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:progress="50"
                android:scaleY="2.0" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pressB"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:text="@string/buttonB"
                android:textColor="@color/colorButtonB" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="pressA"
                android:shadowColor="@android:color/black"
                android:shadowRadius="5"
                android:text="@string/buttonA"
                android:textColor="@color/colorButtonA" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="casual"
        android:text="@string/controlSteeringTitle"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/controlDefaultButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>